5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3465/executions/1757_2541.log
== TEST (2019-05-29 10:56:08) 
-- CODE:
from numpy import *
p = int(input(""))
q = int(input(""))
a = (p-q)**2
a = np.sum(a)**(1/2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:56:38) 
-- CODE:
from numpy import *
p = array(eval(input("")))
q = array(eval(input("")))
a = (p-q)**2
a = np.sum(a)**(1/2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:01) 
-- CODE:
from numpy import *
from numpy as np
p = array(eval(input("")))
q = array(eval(input("")))
a = (p-q)**2
a = np.sum(a)**(1/2)
-- ERROR:
File "XXXX", line 2
    from numpy as np
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:32) 
-- CODE:
from numpy import *
import numpy as np
p = array(eval(input("")))
q = array(eval(input("")))
a = (p-q)**2
a = np.sum(a)**(1/2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:43) 
-- CODE:
from numpy import *
import numpy as np
p = array(eval(input("")))
q = array(eval(input("")))
a = (p-q)**2
a = np.sum(a)**(1/2)
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:57:59) 
-- CODE:
from numpy import *
import numpy as np
p = array(eval(input("")))
q = array(eval(input("")))
a = (p-q)**2
a = np.sum(a)**(1/2)
print(round(a,4))
-- EXECUTION TIME:
0.406836
-- TEST CASE 1:
---- input:
[12,8,24]
[1,2,3]
---- correct output:
24.454
---- user output:
24.454
-- TEST CASE 2:
---- input:
[5,8,3,9,10]
[1,5,6,4,12]
---- correct output:
7.9373
---- user output:
7.9373
-- TEST CASE 3:
---- input:
[78,95,62,77]
[34,12,56,78]
---- correct output:
94.1382
---- user output:
94.1382
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
